@@ -1,3 +1,7 @@
+=== master
+
+* Support Database#with_advisory_lock on PostgreSQL, MySQL, and Microsoft SQL Server (jeremyevans) (#2089)
+
 === 5.77.0 (2024-02-01)
 
 * Support create_table :without_rowid option on SQLite (loranger32) (#2126)
